tests/errors/preprocessor/not_working/functions_cannot_be_changed.c
#define func(a, b) a + b
#define func(a) a + 1

void main()
{

}
